--- a/package.json
+++ b/package.json
@@ -10,14 +10,9 @@
   },
   "dependencies": {
     "pixi-viewport": "^4.36.0",
-    "pixi.js": "^6.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "pixi.js": "^6.5.6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
